--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ body {
 }
 
 .header {
+  
     display: flex;
     flex-direction: column;
     background-color: #C9E6E4;
@@ -54,6 +55,7 @@ body {
     align-items: center;
     padding: 20px;
     grid-area: header;
+    z-index: 100;
 
 }
 
